analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/incompleteFunctionTypeParameter.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE
fun <TY<caret>PE>